...
        android:id="@+id/welcomeFragment"
        android:name="com.hxl.coinfuse.ui.fragments.welcome.WelcomeFragment"
        android:label="fragment_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/welcome_to_navigation"
            app:destination="@id/navigationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
...
    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.hxl.coinfuse.ui.fragments.navigation.NavigationFragment"
        android:label="fragment_navigation"
        tools:layout="fragment_navigation">
        <action
            android:id="@+id/navigation_to_coinDetails"
            app:destination="@id/coinDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
...
